# neural-unsupervised-electrode-mapping

./: .gitignore  QUICKSTART.md  README.md  config.yaml  config_loader.py  cortex_model_utils.py  neumap_demo.py  neumap_demo_interactive.py  neumap_demo_v2.py  pyproject.toml  requirements.txt  review_performance_vs_time_VF.py  review_visual_field_projection.py  utils.py  utils_extension.py
.github/workflows/: ci.yml
notebooks/: rf_demo_notebook_demo.ipynb  rf_demo_notebook_demo_clean.ipynb
scripts/: extract_demo_data.py  run_demo.py
src/: __init__.py  config.py  data_loader.py  pipeline.py  visualization.py
src/rf_demo/: __init__.py  config.py  cortex_model_utils.py  data_loader.py  pipeline.py  utils.py  visualization.py
tests/: conftest.py  test_neumap_demo.py  test_neumap_demo_v2.py  test_pipeline.py
