[project]
name = "neural-unsupervised-electrode-mapping"
version = "0.1.0"
description = "Neural mapping analysis using dimensionality reduction techniques for primate electrophysiology data"
authors = [
    {name = "Antonio Lozano"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "hdbscan>=0.8.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "tests/*.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
